--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.54.0",
@@ -20,6 +21,7 @@
     "mongoose": "^7.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "sharp": "^0.32.6"
   }
 }
