--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "cloudinary-build-url": "^0.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.54.0",
