--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^6.4.0",
     "react-dom": "^18.2.0",
-    "react-flickity-component": "^4.0.7",
+    "react-image-gallery": "^1.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
